# smiled2

./: .gitignore  CLAUDE.md  docker-compose.yml
docs/: DELETION_LOG.md
docs/plans/: 2026-03-23-smiled-core-clinique.md  2026-03-24-phase2-security-ux.md
docs/specs/: 2026-03-23-smiled-core-clinique-design.md  2026-03-24-competitive-analysis.md  2026-03-24-compliance-sante-france.md  2026-03-24-phase2-security-ux-design.md  2026-03-24-ui-redesign-spec.md  2026-03-24-ui-ux-design-research.md
smiled-server/: .dockerignore  .env.example  Cargo.toml  Dockerfile
smiled-server/migrations/: 20260323000001_init.sql  20260323000002_patient.sql  20260323000003_schema_dentaire.sql  20260323000004_diagnostic_pdt.sql  20260323000005_reference_data.sql  20260323000006_rls.sql  20260323000007_seed_actes.sql  20260323000008_seed_materiaux.sql  20260323000009_seed_teintes.sql  20260323000010_seed_permissions.sql  20260323000011_rls_hardening.sql  20260323000012_password_reset.sql  20260323000013_document.sql  20260324000014_create_auth_schema.sql  20260324000015_link_utilisateur_auth.sql  20260324000016_add_pg_trgm.sql  20260324000017_audit_log_columns.sql
smiled-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
smiled-server/src/api/v1/: auth.rs  mod.rs
smiled-server/src/audit/: handlers.rs  middleware.rs
smiled-server/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  permissions.rs  session.rs
smiled-server/src/core/: mod.rs
smiled-server/src/core/acte/: handlers.rs  mod.rs  queries.rs  types.rs
smiled-server/src/core/cabinet/: handlers.rs  mod.rs  queries.rs  types.rs
smiled-server/src/core/diagnostic/: handlers.rs  mod.rs  queries.rs  types.rs
smiled-server/src/core/document/: handlers.rs  mod.rs  queries.rs  storage.rs  types.rs
smiled-server/src/core/historique/: mod.rs
smiled-server/src/core/materiau/: handlers.rs  mod.rs  queries.rs  types.rs
smiled-server/src/core/patient/: handlers.rs  mod.rs  queries.rs  questionnaire.rs  types.rs
smiled-server/src/core/pdt/: handlers.rs  mod.rs  queries.rs  types.rs
smiled-server/src/core/prothese/: handlers.rs  mod.rs  queries.rs  types.rs
smiled-server/src/core/schema_dentaire/: handlers.rs  mod.rs  queries.rs  types.rs
smiled-server/src/db/: mod.rs  pool.rs
smiled-server/src/reference/: mod.rs  motif.rs  teinte.rs  trouble.rs
smiled-server/src/tenant/: middleware.rs
smiled-server/tests/: auth_test.rs  document_test.rs  patient_test.rs  pdt_test.rs  reference_test.rs  schema_dentaire_test.rs
smiled-web/: .env.example  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
smiled-web/app/: app.vue
smiled-web/app/assets/css/: tailwind.css
smiled-web/app/components/: AppBreadcrumb.vue  AppSidebar.vue  CommandPalette.vue
smiled-web/app/components/dental-chart/: ChartInteraction.ts  ChartLegend.vue  DentalChart.vue  ToothDetailPanel.vue  ToothRenderer.ts  dentalChartTypes.ts  fdi-geometry.ts  types.ts
smiled-web/app/components/paro/: ParoChart.vue
smiled-web/app/components/pdt/: PdtBuilder.vue
smiled-web/app/components/questionnaire/: SectionDentaire.vue  SectionHabitudes.vue  SectionHemoragique.vue  SectionInfectieux.vue  SectionMedicamenteux.vue  SectionTroubles.vue
smiled-web/app/composables/: useActe.ts  useApi.ts  useAuth.ts  useAuthClient.ts  useAutoSave.ts  useCabinet.ts  useDebounce.ts  useDentalChart.ts  useDiagnostic.ts  useDocument.ts  useHistorique.ts  useMateriau.ts  useParo.ts  usePatient.ts  usePdt.ts  usePermissions.ts  useTeinte.ts
smiled-web/app/layouts/: auth.vue  default.vue
smiled-web/app/middleware/: auth.global.ts
smiled-web/app/pages/: dashboard.vue  forgot-password.vue  index.vue  landing.vue  login.vue  reset-password.vue
smiled-web/app/pages/actes/: index.vue
smiled-web/app/pages/cabinet/: index.vue  users.vue
smiled-web/app/pages/materiaux/: index.vue
smiled-web/app/pages/patients/: [id].vue  index.vue
smiled-web/app/stores/: auth.ts
smiled-web/app/types/: api.ts  patient.ts
smiled-web/app/utils/: display.ts  format.ts
smiled-web/server/: auth.ts
(+57 files in other folders)
