[package]
name = "smiled-server"
version = "0.1.0"
edition = "2021"
authors = ["Smiled.IO Team"]
description = "Smiled.IO dental software backend — Axum + PostgreSQL + S3"

[[bin]]
name = "smiled-server"
path = "src/main.rs"

[lib]
name = "smiled_server"
path = "src/lib.rs"

[dependencies]
# HTTP framework
axum = { version = "0.7", features = ["macros", "multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "compression-gzip", "set-header", "request-id"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "bigdecimal",
] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication is handled by Better Auth (Nuxt side).
# Rust only validates sessions via DB queries — no JWT/password crates needed.
# argon2 is kept temporarily for seed_demo.rs (TODO: remove when seed_demo is updated)
argon2 = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# S3/MinIO
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Async trait support
async-trait = "0.1"

# File type detection (magic bytes)
infer = "0.16"

# Rate limiting
tower_governor = { version = "0.4.3", features = ["axum"] }

# Cookies
tower-cookies = "0.10"
cookie = { version = "0.18", features = ["secure", "percent-encode"] }

# Errors
thiserror = "1"
anyhow = "1"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
